One last license update.

--- a/lib/AngularCodeMirror.css
+++ b/lib/AngularCodeMirror.css
@@ -3,8 +3,7 @@
  * 
  * CodeMirror.css overrides
  *
- *
- * Copyright (c) 2013-2014 Chris Houseknecht
+ * Copyright (c) 2014 Chris Houseknecht
  *
  * The MIT License (MIT)
  *
